fix dashboard connect networktables

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -10,20 +10,20 @@
             <div class="buttons">
                 <div class="button"></div>
             </div>
+            <div class="cameras">
+                <img src="asset/doh.png" alt="" />
+                <img src="asset/doh.png" alt="" />
+            </div>
+            <script src="d3.min.js"></script>
+            <script src="jquery.min.js"></script>
+            <p></p>
+            <script src="main.js"></script>
+            <div id="nt-table"></div>
         </main>
-        <div class="cameras">
-            <img src="asset/doh.png" alt="" />
-            <img src="asset/doh.png" alt="" />
-        </div>
-    </body>
-    <script src="d3.min.js"></script>
-    <script src="jquery.min.js"></script>
-    <p></p>
-    <script src="main.js"></script>
-    <!--
+        <!--
          camera
          temps
          wheel position
          mode
-    -->
+    --></body>
 </html>
