--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -11,13 +11,15 @@
                 <div class="button"></div>
             </div>
             <div class="cameras">
-                <img src="asset/doh.png" alt="" />
-                <img src="asset/doh.png" alt="" />
+                <!--<img src="asset/doh.png" alt="" />
+                <img src="asset/doh.png" alt="" />-->
+                <canvas id="cool" width="430" height="300"></canvas>
             </div>
             <script src="d3.min.js"></script>
             <script src="jquery.min.js"></script>
             <p></p>
             <script src="main.js"></script>
+            <script src="canvas.js"></script>
             <div id="nt-table"></div>
         </main>
         <!--
