--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -13,13 +13,24 @@
             <div class="cameras">
                 <!--<img src="asset/doh.png" alt="" />
                 <img src="asset/doh.png" alt="" />-->
-                <canvas id="cool" width="430" height="300"></canvas>
+                <!--<canvas id="cool" width="430" height="300"></canvas>-->
+            </div>
+            <div class="swerve">
+                <div class="swerve-row">
+                    <!--FL-->
+                    <!--FR-->
+                </div>
+                <div class="swerve-row">
+                    <!--RL-->
+                    <!--RR-->
+                </div>
+                <!-- makefile inserts swerve.svg inline here -->
             </div>
             <script src="d3.min.js"></script>
             <script src="jquery.min.js"></script>
             <p></p>
             <script src="main.js"></script>
-            <script src="canvas.js"></script>
+            <!--<script src="canvas.js"></script>-->
             <div id="nt-table"></div>
         </main>
         <!--
