add swerve desired too

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -26,6 +26,17 @@
                 </div>
                 <!-- makefile inserts swerve.svg inline here -->
             </div>
+            <div class="swerve-desired">
+                <div class="swerve-row">
+                    <!--FL-->
+                    <!--FR-->
+                </div>
+                <div class="swerve-row">
+                    <!--RL-->
+                    <!--RR-->
+                </div>
+                <!-- makefile inserts swerve.svg inline here -->
+            </div>
             <script src="d3.min.js"></script>
             <script src="jquery.min.js"></script>
             <p></p>
