change the desired wheels to an overlay on top the actual wheels

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -16,26 +16,26 @@
                 <!--<canvas id="cool" width="430" height="300"></canvas>-->
             </div>
             <div class="swerve">
-                <div class="swerve-row">
-                    <!--FL-->
-                    <!--FR-->
+                <div class="swerve-actual">
+                    <div class="swerve-row">
+                        <!--FL-->
+                        <!--FR-->
+                    </div>
+                    <div class="swerve-row">
+                        <!--RL-->
+                        <!--RR-->
+                    </div>
                 </div>
-                <div class="swerve-row">
-                    <!--RL-->
-                    <!--RR-->
+                <div class="swerve-desired">
+                    <div class="swerve-row">
+                        <!--FLd-->
+                        <!--FRd-->
+                    </div>
+                    <div class="swerve-row">
+                        <!--RLd-->
+                        <!--RRd-->
+                    </div>
                 </div>
-                <!-- makefile inserts swerve.svg inline here -->
-            </div>
-            <div class="swerve-desired">
-                <div class="swerve-row">
-                    <!--FL-->
-                    <!--FR-->
-                </div>
-                <div class="swerve-row">
-                    <!--RL-->
-                    <!--RR-->
-                </div>
-                <!-- makefile inserts swerve.svg inline here -->
             </div>
             <script src="d3.min.js"></script>
             <script src="jquery.min.js"></script>
