--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
         <title>DASHBOURDE</title>
         <link rel="stylesheet" href="style.scss" type="text/css" />
     </head>
@@ -41,9 +41,11 @@
             <!--<script src="canvas.js"></script>-->
         </main>
         <div id="nt-table">
-            <div id="_" class="nt-div disabled">
-                <div class="nt-title" id="__title" onClick="ntToggle(this)">NetworkTables</div>
-                <div class="nt-div-container" id="_-"></div>
+            <div id="nt" class="nt-div disabled">
+                <div class="nt-title" id="__title" onClick="ntToggle(this)">
+                    NetworkTables
+                </div>
+                <div class="nt-div-container" id="%2F"></div>
             </div>
         </div>
         <!--
