add FIEld relATIVE TOGGLE BUTTON!!!!

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -31,8 +31,9 @@
                 </div>
             </div>
             <img id="camera" src="http://10.17.21.11:5800" />
-            <div class="buttons">
-                <div id="fieldrelative" class="button"></div>
+            <div id="fieldrelative" class="button">
+                <div class="text">Field Relative</div>
+                <div class="indicator">??</div>
             </div>
             <script src="d3.min.js"></script>
             <script src="jquery.min.js"></script>
