hide broken image icon

--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -30,7 +30,7 @@
                     </div>
                 </div>
             </div>
-            <img id="camera" src="http://10.17.21.11:5800" />
+            <img id="camera" src="http://10.17.21.11:5800" alt="" />
             <div id="fieldrelative" class="button">
                 <div class="text">Field Relative</div>
                 <div class="indicator">??</div>
