--- a/dashboard/src/index.html
+++ b/dashboard/src/index.html
@@ -2,19 +2,12 @@
 
 <html>
     <head>
+        <meta charset="UTF-8" />
         <title>DASHBOURDE</title>
-        <link rel="stylesheet" href="style.scss" />
+        <link rel="stylesheet" href="style.scss" type="text/css" />
     </head>
     <body>
         <main>
-            <div class="buttons">
-                <div class="button"></div>
-            </div>
-            <div class="cameras">
-                <!--<img src="asset/doh.png" alt="" />
-                <img src="asset/doh.png" alt="" />-->
-                <!--<canvas id="cool" width="430" height="300"></canvas>-->
-            </div>
             <div class="swerve">
                 <div class="swerve-actual">
                     <div class="swerve-row">
@@ -37,13 +30,25 @@
                     </div>
                 </div>
             </div>
+            <img id="camera" src="http://10.17.21.11:5800" alt="" />
+            <div id="fieldrelative" class="button">
+                <div class="text">Field Relative</div>
+                <div class="indicator">??</div>
+            </div>
             <script src="d3.min.js"></script>
             <script src="jquery.min.js"></script>
             <p></p>
             <script src="main.js"></script>
             <!--<script src="canvas.js"></script>-->
-            <div id="nt-table"></div>
         </main>
+        <div id="nt-table">
+            <div id="nt" class="nt-div disabled">
+                <div class="nt-title" id="__title" onClick="ntToggle(this)">
+                    NetworkTables
+                </div>
+                <div class="nt-div-container" id="%2F"></div>
+            </div>
+        </div>
         <!--
          camera
          temps
